--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,7 @@ body.index-page .nav-link:hover {
     text-align: center;
     height: 250px;
     width: 200px;
+    cursor: pointer;
 }
 
 .artist-card:hover {
